# SimpleManus

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start_server.bat  start_server.sh  start_simplemanus_api.py  start_web_server.py  test_api.sh
agent/: AgentRegister.py  BaseAgent.py  SampleAgent.py  __init__.py  global_agent.py
config/: __init__.py  config.py  provider_template.json
context/: context.py  context_manager.py  conversation_history.json  conversation_manager.py  schemas.py  sketch_manager.py  sketch_pad.py
docker/: Dockerfile  docker-compose.redis.yml  docker-compose.yml  entrypoint.sh  env.example  provider_template.json  redis.conf
docs/: websocket_api.md
tools/: __init__.py  code_tools.py  command_tools.py  common.py  dht11_tools.py  file_tools.py  model_view_tools.py  requirements_tools.py  sketch_tools.py  tools.py
web_interface/: __init__.py  error_handlers.py  models.py  server.py  state.py  utils.py
web_interface/routers/: __init__.py  agent_router.py  chat_router.py  conversation_router.py  health_router.py
