[project]
name = "simplemanus"
version = "0.1.0"
description = "A universal agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simplellmfunc>=0.2.13",
    "fastapi>=0.115.14",
    "uvicorn>=0.34.3",
    "pydantic>=2.5.0",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
    "pydantic-core>=2.33.2",
    "redis>=6.4.0",
]
