[project]
name = "simplemanus"
version = "0.1.0"
description = "A universal agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simplellmfunc>=0.2.13",
    "fastapi",
    "uvicorn",
    "pydantic",
    "websocket",
    "websockets",
    "pydantic-core",
    "redis",
]
